--- a/front/package.json
+++ b/front/package.json
@@ -23,8 +23,8 @@
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-confirm-alert": "^3.0.6",
+    "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
-    "react-full-page": "^0.1.12",
     "react-hook-form": "^7.46.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-infinite-scroller": "^1.2.6",
@@ -67,6 +67,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-datepicker": "^4.15.0",
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
