--- a/back/package.json
+++ b/back/package.json
@@ -11,13 +11,17 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.438.0",
+    "@types/multer": "^1.4.9",
+    "aws-sdk": "^2.1483.0",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.0",
-    "multer": "^1.4.5-lts.1",
+    "multer": "^1.4.4",
+    "multer-s3": "^3.0.1",
     "mysql2": "^3.2.0",
     "sequelize": "^6.29.3",
     "sequelize-cli": "^6.6.0"
