--- a/front/package.json
+++ b/front/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "moseoreview-front",
+  "name": "goodlock_godlock_front",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -20,6 +20,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "moment": "^2.29.4",
     "nodemon": "^2.0.22",
+    "pm2": "^5.3.0",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
     "react-confirm-alert": "^3.0.6",
