--- a/front/package.json
+++ b/front/package.json
@@ -15,7 +15,7 @@
     "@types/react": "^18.2.21",
     "@types/react-dom": "^18.2.7",
     "@types/react-responsive": "^8.0.5",
-    "axios": "^1.5.0",
+    "axios": "^1.6.2",
     "clipboard": "^2.0.11",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-prettier": "^4.2.1",
@@ -27,6 +27,7 @@
     "react-confirm-alert": "^3.0.6",
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
     "react-hook-form": "^7.46.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-infinite-scroller": "^1.2.6",
@@ -73,6 +74,7 @@
     "@types/styled-components": "^5.1.26",
     "@typescript-eslint/eslint-plugin": "^5.62.0",
     "@typescript-eslint/parser": "^5.62.0",
+    "ajv": "^8.12.0",
     "eslint": "^8.49.0",
     "eslint-plugin-react": "^7.33.2"
   }
