--- a/back/package.json
+++ b/back/package.json
@@ -14,6 +14,7 @@
     "@aws-sdk/client-s3": "^3.438.0",
     "@types/multer": "^1.4.9",
     "aws-sdk": "^2.1483.0",
+    "axios": "^1.6.2",
     "bcrypt": "^5.1.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -23,6 +24,7 @@
     "multer": "^1.4.4",
     "multer-s3": "^3.0.1",
     "mysql2": "^3.2.0",
+    "request": "^2.88.2",
     "sequelize": "^6.29.3",
     "sequelize-cli": "^6.6.0"
   },
