--- a/back/package.json
+++ b/back/package.json
@@ -24,6 +24,7 @@
     "multer": "^1.4.4",
     "multer-s3": "^3.0.1",
     "mysql2": "^3.2.0",
+    "nodemailer": "^6.9.7",
     "request": "^2.88.2",
     "sequelize": "^6.29.3",
     "sequelize-cli": "^6.6.0"
