--- a/front/package.json
+++ b/front/package.json
@@ -36,6 +36,7 @@
     "react-responsive": "^9.0.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
+    "react-simple-chatbot": "^0.6.1",
     "react-toastify": "^9.1.3",
     "styled-components": "^5.3.11",
     "styled-reset": "^4.5.1",
