--- a/front/package.json
+++ b/front/package.json
@@ -35,6 +35,7 @@
     "react-material-ui-carousel": "^3.4.2",
     "react-query": "^3.39.3",
     "react-responsive": "^9.0.2",
+    "react-responsive-carousel": "^3.2.23",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-simple-chatbot": "^0.6.1",
