--- a/front/package.json
+++ b/front/package.json
@@ -31,6 +31,7 @@
     "react-hook-form": "^7.46.1",
     "react-infinite-scroll-component": "^6.1.0",
     "react-infinite-scroller": "^1.2.6",
+    "react-progressive-graceful-image": "^0.7.0",
     "react-query": "^3.39.3",
     "react-responsive": "^9.0.2",
     "react-responsive-carousel": "^3.2.23",
