--- a/front/package.json
+++ b/front/package.json
@@ -17,7 +17,6 @@
     "@types/react-dom": "^18.2.7",
     "@types/react-responsive": "^8.0.5",
     "axios": "^1.6.2",
-    "clipboard": "^2.0.11",
     "eslint-config-prettier": "^8.10.0",
     "eslint-plugin-prettier": "^4.2.1",
     "moment": "^2.29.4",
@@ -25,6 +24,7 @@
     "pm2": "^5.3.0",
     "prettier": "^2.8.8",
     "react": "^18.2.0",
+    "react-clipboard.js": "^2.0.16",
     "react-confirm-alert": "^3.0.6",
     "react-datepicker": "^4.18.0",
     "react-dom": "^18.2.0",
