--- a/front/public/manifest.json
+++ b/front/public/manifest.json
@@ -1,6 +1,6 @@
 {
-  "short_name": "굿락갓락",
-  "name": "굿락갓락",
+  "short_name": "God Lock",
+  "name": "God Lock",
   "icons": [
     {
       "src": "favicon.ico",
