--- a/front/package.json
+++ b/front/package.json
@@ -41,7 +41,8 @@
     "react-toastify": "^9.1.3",
     "styled-components": "^5.3.11",
     "styled-reset": "^4.5.1",
-    "typescript": "^4.9.5"
+    "typescript": "^4.9.5",
+    "zustand": "^4.4.7"
   },
   "scripts": {
     "start": "NODE_OPTIONS=--max-old-space-size=4096 react-scripts start",
