--- a/back/package.json
+++ b/back/package.json
@@ -15,7 +15,7 @@
     "@types/multer": "^1.4.9",
     "aws-sdk": "^2.1483.0",
     "axios": "^1.6.2",
-    "bcrypt": "^5.1.0",
+    "bcrypt": "^5.1.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
@@ -25,6 +25,7 @@
     "multer-s3": "^3.0.1",
     "mysql2": "^3.2.0",
     "nodemailer": "^6.9.7",
+    "nodemon": "^3.1.7",
     "request": "^2.88.2",
     "sequelize": "^6.29.3",
     "sequelize-cli": "^6.6.0"
